2003-11-08  Alper Ersoy  <dirt@gtk.org>

	* doc/texinfo.txi (Custom Headings): removed a newline that broke
	Docbook output.

	* NEWS:
	* makeinfo/cmds.c: new command @registeredsymbol

	* makeinfo/cmds.c (cm_registeredsymbol): new function.
	(cm_code): fixed in_fixed_width_font adjustment for XML and Docbook
	outputs.
	(cm_noindent, cm_indent): set xml_no_indent as well.

	* makeinfo/makeinfo.c (reader_loop): use entities for double quotes
	and dashes in HTML, XML and Docbook outputs.

	* makeinfo/multi.c (setup_multitable_parameters): convert
	@columnfractions to integer percentages (original code from Arnold
	Robbins <arnold@skeeve.com>.)
	(multitable_item, cm_tab): add width attribute to <td> element if
	@columnfractions is used.

	* makeinfo/texinfo.dtd: added an optional role attribute to para
	element (used for @noindent.)  New attributes ldquo, rdquo, ndash,
	mdash, registered.

	* makeinfo/xml.c: replaced repeated command element with more
	appropriate Docbook elements in docbook_element_list.
	(xml_start_para, xml_end_para): new functions to centralize paragraph
	handling.

	* makeinfo/xml.h: new variable xml_no_indent.

2003-11-07  Karl Berry  <karl@gnu.org>

	* bootstrap: run the various auto* tools we need instead of
		autoreconf, which copies in older versions of files.

	* doc/Makefile.am (texinfo): remove the special rule, it seems to
		be fixed.

	* Makefile.am (AUTOMAKE_OPTIONS): bump to 1.7.8.
	* doc/version.texi, doc/version-stnd.texi: cvs add these again,
	because with AM_MAINTAINER_MODE they are not created
	(unless --enable-maintainer-mode is given).

	* doc/Makefile.am (*.1) [MAINTAINER_MODE]: use this conditional
	instead of TEXINFO_MAINT, now that we have it.
	* configure.ac (TEXINFO_MAINT): no longer needed, since we call
	AM_MAINTAINER_MODE.

2003-11-06  Karl Berry  <karl@gnu.org>

	* bootstrap: ok, restore --force since it doesn't help Alper
	anyway.

	* AUTHORS: Silly syntax.